# projects

./: speech-emotion-recognition.ipynb
Projects-Independent_Projects/: text-to-sql-updated.ipynb
Projects-Independent_Projects/email_sentiment_analysis/: README_email_sentiment_analysis.md
Projects-Independent_Projects/excel_version_control/: package-lock.json  package.json  tailwind.config.js
Projects-Independent_Projects/excel_version_control/src/: App.tsx
Projects-Independent_Projects/speech_emotion_recognition/: README_speech_emotion_recognition.md
Projects-Independent_Projects/text_to_sql/: README_text_to_sql.md  text_to_sql.ipynb
corporate_actions/: LICENSE  README.md  corp_actions_dev_guide_v2.md  pyproject.toml
corporate_actions/src/corp_actions/: __init__.py  cli.py  engine.py  health.py  identifiers.py  impact.py  models.py  recon.py  replay.py  splits.py  validator.py  watcher.py
corporate_actions/src/corp_actions.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
corporate_actions/tests/: test_breaks.py  test_db.py  test_dividends.py  test_edgar.py  test_explainer_advanced.py  test_health.py  test_identifiers.py  test_impact.py  test_monitor.py  test_recon.py  test_replay.py  test_splits.py  test_validator.py  test_watcher.py
email_sentiment_analysis/: email_sentiment_analysis.ipynb
excel_version_control/: index.html  tsconfig.json  tsconfig.server.json
excel_version_control/sample-data/: create-sample.js
excel_version_control/src/: index.css
speech_emotion_recognition/: speech_emotion_recognition.ipynb
(+22 files in other folders)
