[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corp-actions"
version = "0.1.0"
description = "Corporate actions intelligence engine for trading operations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Harshita", email = "Hdassani09@gmail.com"},
]
keywords = ["corporate-actions", "finance", "trading", "splits", "dividends", "mergers", "reconciliation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "yfinance>=0.2.36",
    "edgartools>=5.0",
    "httpx>=0.27",
    "click>=8.0",
]

[project.optional-dependencies]
llm = ["groq>=0.9"]
dev = ["pytest>=8.0", "build>=1.0"]

[project.scripts]
corp-actions = "corp_actions.cli:cli"

[project.urls]
Homepage = "https://github.com/harshita/corp-actions"
Issues = "https://github.com/harshita/corp-actions/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require network access (deselect with '-m \"not network\"')",
]
